- Updated primary button hover effect, added letter spacing to password field, fixed font size in header, added white spacing on top of scrum note input

--- a/src/_style/style-sheets/header/component/header-component.scss
+++ b/src/_style/style-sheets/header/component/header-component.scss
@@ -26,6 +26,7 @@
             @include center();
             font-weight: 900;
             color: $text-tertiary-color;
+            font-size: 1.15em;
             display: none;
     
             li {
